Prevent overflow on wide screen

--- a/src/pages/style/UserCard.css
+++ b/src/pages/style/UserCard.css
@@ -1,6 +1,6 @@
 .user-card-container {
   display: grid;
-  width: 100vw;
+  width: 100%;
   background-color: lavender;
   margin-bottom: 25px;
 
